Fix all identified code issues: null checks, security, validation, dead code, CORS/actuator config
Agent-Logs-Url: https://github.com/JonathanKudsk/Carebridge-backend-2026/sessions/9eece7a4-95c5-44d0-b9ab-cae1c4da4727

Co-authored-by: 73N37 <93562832+73N37@users.noreply.github.com>